# Detect

./: .gitignore  README.md  train.py
config/: config.py  data.yaml
data/images/: bev_map_upgrade_.txt
lidar3d_detection_ws/: .gitignore  COMMANDS.TXT  README.md  commands.txt  config.ini  report.txt  requirements.txt  results (1).csv  results.csv
lidar3d_detection_ws/labels/: _classes.json  innoviz_00001.txt
lidar3d_detection_ws/src/lidar_detection_pkg/: package.xml  setup.py
lidar3d_detection_ws/src/lidar_detection_pkg/lidar_detection_pkg/: bin_publisher_node.py  lidar_detection_node.py  lidar_detection_with_count_node.py
lidar3d_detection_ws/src/lidar_solution_bringup/: CMakeLists.txt  package.xml
lidar3d_detection_ws/src/lidar_solution_bringup/config/: parameters.yaml
lidar3d_detection_ws/src/lidar_solution_bringup/launch/: lidar_solution_bringup.launch.py
lidar3d_detection_ws/src/lidar_tf_position_publisher/: CMakeLists.txt  package.xml
lidar3d_detection_ws/src/lidar_tf_position_publisher/config/: backup.yaml  config.yaml
lidar3d_detection_ws/src/lidar_tf_position_publisher/include/lidar_tf_position_publisher/: lidar_tf_position_publisher_node.hpp
lidar3d_detection_ws/src/lidar_tf_position_publisher/params/: parameters.yaml
lidar3d_detection_ws/src/lidar_tf_position_publisher/src/: lidar_tf_position_publisher_node.cpp
lidar3d_detection_ws/src/pointcloud_saver/: package.xml  setup.py
lidar3d_detection_ws/src/pointcloud_saver/config/: image_config.yaml
lidar3d_detection_ws/src/pointcloud_saver/pointcloud_saver/: pointcloud_saver_node.py
lidar3d_detection_ws/src/sfa3d_ros2/: package.xml  setup.cfg  setup.py
lidar3d_detection_ws/src/sfa3d_ros2/launch/: kitti_test.launch.py  sfa3d.launch.py
lidar3d_detection_ws/src/sfa3d_ros2/rviz/: kitti_view.rviz
lidar3d_detection_ws/src/sfa3d_ros2/sfa3d_ros2/: counter_pub.py  kitti_player_node.py  sfa3d_node.py  temp.py
lidar3d_detection_ws/train/: labels.cache  main.py  train_from_checkpoint.py  train_on_all_from_scratch.py
lidar3d_detection_ws/train/config/: data.yaml  preprocessing_config.yaml
lidar3d_detection_ws/train/data_processing/: angel_view.py  augmentation.py  dataset.py  generate_augmented_dataset.py  kitti_normalization.py  preproccesing_0.py  preprocessing.py
lidar3d_detection_ws/train/evaluation/: classification_report.txt
lidar3d_detection_ws/train/labels/: 000000.txt  000001.txt  000002.txt  000003.txt  000004.txt  000005.txt  000006.txt  000007.txt  000008.txt  000009.txt  000010.txt  innoviz_00001.txt
lidar3d_detection_ws/train/models/: evaluate.py  loss.py  train.py  yolo_bev.py
lidar3d_detection_ws/train/scripts/: test_script.py
src/od_detection/: package.xml  setup.cfg  setup.py
src/od_detection/od_detection/: cloud_subscriber.py  functions_for_kitti.py  kitti_config.py  kitti_player_node.py
train/output/bev-from-scratch/train/: args.yaml
train/output/dataset/: dataset.yaml
utils/: args_parser.py  augmentation_handler.py  dataset_saver.py  device_utils.py  io_utils.py  train_from_scratch.py  training_handler.py
