<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_solution_bringup</name>
  <version>0.0.1</version>
  <description>Package for managing lidar solution parameters and launch files</description>
  <maintainer email="yakir@cogniteam.com">Yakir</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>lidar_tf_position_publisher</exec_depend>
  <exec_depend>lidar_motion</exec_depend>
  <exec_depend>alert_zones</exec_depend>
  <exec_depend>tracking_clusters_cpp</exec_depend>
  <exec_depend>alert_goal_controller</exec_depend>
  <exec_depend>projection_controller_cpp</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
